@@ -1,0 +1,37 @@
+<?php
+/**
+ * Message translations.
+ *
+ * This file is automatically generated by 'yiic message' command.
+ * It contains the localizable messages extracted from source code.
+ * You may modify this file by translating the extracted messages.
+ *
+ * Each array element represents the translation (value) of a message (key).
+ * If the value is empty, the message is considered as not translated.
+ * Messages that no longer need translation will have their translations
+ * enclosed between a pair of '@@' marks.
+ *
+ * NOTE, this file must be saved in UTF-8 encoding.
+ *
+ * @version $Id: $
+ */
+return array (
+  'Are you sure you want to delete this item?' => 'Sei sicuro di voler eliminare questo dato?',
+  'Delete' => 'Elimina',
+  'Displaying {start}-{end} of {count} result(s).' => 'Visualizzazione {start}-{end} di {count} risultati.',
+  'No' => 'No',
+  'No results found.' => 'Nessun risultato trovato.',
+  'Not set' => 'Non impostato',
+  'Please specify the "attributes" property.' => 'Specificare la proprietà "attributes".',
+  'Please specify the "model" property.' => 'Specificare la proprietà "model".',
+  'Sort by: ' => 'Ordinato per:',
+  'The "dataProvider" property cannot be empty.' => 'La proprietà "dataProvider" non n può essere vuota.',
+  'The attribute must be specified in the format of "Name:Type:Label", where "Type" and "Label" are optional.' => 'L\'attributo deve essere specificato nel formato "Name:Type:Label", dove "Type" e "Label" sono opzionali.',
+  'The property "itemView" cannot be empty.' => 'La proprietà "itemView" non può essere vuota.',
+  'Total {count} result(s).' => 'Totale {count} risultati',
+  'Unknown type "{type}".' => 'Tipo sconosciuto "{type}".',
+  'Update' => 'Modifica',
+  'View' => 'Vista',
+  'Yes' => 'Si',
+  '{class} must specify "model" and "attribute" or "name" property values.' => '{class} deve specificare gli attributi "model" e "attribute" oppure un valore per la proprietà "name".',
+);
